float no analisador lexico